--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,72 @@
+body {
+    background-color: black;
+    text-align: center;
+}
+
 #root {
-    margin-top: 4em;
+    margin-top: 10%;
     display: block;
-    margin-left: 4em;
+    margin-left: auto;
     margin-right: auto;
+}
+
+#images {
+    display: inline-block;
+}
+
+#spotify-logo {
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+#github-logo {
+    width: 150px;
+    height: 150px;
+    margin-left: 2em;
+}
+
+#url-form {
+    margin-top: 3em;
+    display: block;
+}
+
+input[type=text] {
+    border-radius: 4px;
+    background-color: rgb(20, 20, 20);
+    border: 4px solid rgba(90, 250, 76, 0.788);
+    width: 25em;
+    height: 2em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    letter-spacing: 1px;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+}
+
+input[type=submit] {
+    margin-left: 1em;
+    border-radius: 4px;
+    background-color: rgb(20, 20, 20);
+    border: 2px solid white;
+    color: rgba(90, 250, 76, 0.788);
+    width: 5em;
+    height: 2.5em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+#hint {
+    padding-top: 2em;
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 
+        Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 13px;
+    letter-spacing: 1px;
+    font-weight: bold;
 }
